Changing the test parameters
	* Changing the test data package name to be able to run old geode versions
	* Test create smaller JVM for travis to be able to run it.